tests/transpiler/x/hs/list_assign.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/list_assign.hs:3:8: error:
    • No instance for (Num [[a0]]) arising from the literal ‘3’
    • In the expression: 3
      In an equation for ‘nums’: nums = 3
  |
3 | nums = 3
  |        ^

/workspace/mochi/tests/transpiler/x/hs/list_assign.hs:7:28: error:
    • Ambiguous type variable ‘a0’ arising from a use of ‘show’
      prevents the constraint ‘(Show a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Show Ordering -- Defined in ‘GHC.Show’
        instance Show a => Show (Maybe a) -- Defined in ‘GHC.Show’
        ...plus 25 others
        ...plus 12 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the first argument of ‘map’, namely ‘show’
      In the first argument of ‘unwords’, namely ‘(map show (nums !! 1))’
      In the first argument of ‘putStrLn’, namely
        ‘(unwords (map show (nums !! 1)))’
  |
7 |     putStrLn (unwords (map show (nums !! 1)))
  |                            ^^^^
