tests/transpiler/x/hs/list_assign.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 21:29:05 GMT+7
import Data.List (isInfixOf, union, intersect, (\\))
nums = 3

main :: IO ()
main = do
    putStrLn (unwords (map show (nums !! 1)))
